Bug 152085 - doesn't fit within 800x600
Summary: doesn't fit within 800x600
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: triaged
: 174572 186215 (view as bug list)
Depends on:
Blocks:
 
Reported: 2007-11-10 00:03 UTC by Tomas Pospisek
Modified: 2009-03-07 16:55 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
picture of korganizer not fitting within 800x600 (42.74 KB, image/png)
2007-11-10 00:03 UTC, Tomas Pospisek
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tomas Pospisek 2007-11-10 00:03:13 UTC
Version:           4.0beta4 (using KDE KDE 3.95.0)
Installed from:    Unlisted Binary Package
OS:                Linux

kcontrol doesn't fit into a 800x600 resolution display, as being configured by default in VirtualBox, when running the KDE-Four-Live.i686-0.6.1.iso.

See attached screenshot.
Comment 1 Tomas Pospisek 2007-11-10 00:03:52 UTC
Created attachment 22021 [details]
picture of korganizer not fitting within 800x600
Comment 2 Michael Leupold 2008-09-28 21:27:26 UTC
I just tried and I can fit my korganizer into 800x600 even when using oxygen (which is not known for saving space :)) and bigger-than-neccessary fonts on trunk r865573.
Comment 3 Sergio Martins 2009-03-05 14:45:52 UTC
*** Bug 186215 has been marked as a duplicate of this bug. ***
Comment 4 Sergio Martins 2009-03-05 16:42:07 UTC
Reporters, 

can you hide the sidebar and try again?

Settings->Sidebar, uncheck all 4 items
Comment 5 Michael Leupold 2009-03-05 22:44:02 UTC
On 4.2.0 I can easily fit it within 800x600 with all sidebars shown. They limit vertical resizability but if you hide them you can resize korganizer to a tiny square.

I actually think I forgot to close this one back when I triaged it.
Comment 6 Sergio Martins 2009-03-06 00:41:24 UTC
I reproduced this with KDE4.2.1, reopening.
Comment 7 Sergio Martins 2009-03-06 05:20:07 UTC
*** Bug 174572 has been marked as a duplicate of this bug. ***
Comment 8 Sergio Martins 2009-03-07 16:55:03 UTC
SVN commit 936433 by smartins:

Set small minimum heights to these components so KOrganizer fits in small screens.

BUG: 152085


 M  +1 -0      koeventviewer.cpp  
 M  +2 -0      resourceview.cpp  
 M  +2 -0      views/todoview/kotodoview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=936433