Set small minimum heights to these components so KOrganizer fits in small screens.

BUG: 152085

svn path=/trunk/KDE/kdepim/; revision=936433