koeventviewer.cpp
@@ -46,6 +46,7 @@ KOEventViewer::KOEventViewer( QWidget *parent )
 {
   mIncidence = 0;
   setNotifyClick( true );
+  setMinimumHeight( 1 );
 }
 
 KOEventViewer::~KOEventViewer()
